--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
     
     <h2>WEBPAGE LINKS</h2>
     <a href="code">HTML (H)</a> <a href="code-vertical">HTML (V)</a>
+    <p><a href="JS-Notebook-2">NB-2</a> <a href="JS-Notebook">JS Notebook</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
     <p><a href="M3U8/m3u8">M3U8 To MP4</a></p>
     <p><a href="offnote">Offline Notes</a><p>
-    <p><a href="JS-Notebook">JS Notebook</a></p>
+
     <p><a href="https://1nrp.vercel.app" target="_self">Cloud Notes</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="https://1nrp.github.io/vid/cors" style="background-color: #000; padding: 20px 60px"></a></p>
