--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <p><a href="JS-Notebook-2">NB-2</a> <a href="JS-Notebook">JS Notebook</a></p>
     <p><a href="https://1nrp.vercel.app" target="_self">Cloud Notes</a> <a href="https://1nrp.vercel.app/Blob">Blob</a></p>
     <p><a href="hls">HLS Player For PC</a></p>
+    <p><a href="Firebase-Notes">Firebase Notes</a></p>
     <p><a href="M3U8/m3u8">M3U8 To MP4</a></p>
     <p><a href="offnote">Offline Notes</a><p>
     <p><a href="text">Text Reader</a></p>
