--- a/JS-Notebook.html
+++ b/JS-Notebook.html
@@ -141,13 +141,12 @@
   <div class="toolbar">
     <input style="display:none; margin:0px 0px 4px 0px;" id="notebook-title" placeholder="Untitled Notebook" value="Untitled Notebook">
     <div>
-      <button id="add-code" style="padding: 3px 6px">+ CODE</button>
-      <button id="add-text" style="padding: 3px 6px" onclick="showNotebookList(); document.getElementById('notebook-title').style.display = (document.getElementById('notebook-title').style.display == 'none') ? 'block' : 'none';">+ TEXT</button>
-      <button id="download-notebook">▼ LOAD</button>
-      <input id="upload-notebook" type="file" style="display: none;">
-      <button id="upload-trigger">▲ LOAD</button>
-      <button style="margin:0px 0px 0px 10px" onclick="setLocal()" id="move-down">▼</button>
-      <button id="move-up" onclick="getLocal()">▲</button>
+      <button onclick="createCodeCell()" style="padding: 3px 6px">+ CODE</button>
+      <button id="show-title" style="padding: 3px 6px" onclick="showNotebookList(); document.getElementById('notebook-title').style.display = (document.getElementById('notebook-title').style.display == 'none') ? 'block' : 'none';">TOGGLE</button>
+      <button onclick="setLocal()" style="margin-left: 6px">▼ SET</button>
+      <button onclick="getLocal()" style="margin-left: 6px">▲ GET</button>
+      <button style="margin:0px 0px 0px 10px" onclick="saveNotebook()">▲</button>
+      <button onclick="getNotebook()">▼</button>
     </div>
   </div>
   <div id="notebook"></div>
@@ -197,37 +196,6 @@ function showAlert({ BgColor = '#fff', Text = 'Alert' } = {}) {
       cell.editor = editor;
     }
 
-    function createTextCell() {
-      const cellId = `cell-${++cellCounter}`;
-      const cell = document.createElement('div');
-      cell.classList.add('cell', 'text-cell');
-      cell.id = cellId;
-      cell.innerHTML = `
-        <div class="cell-buttons">
-          <button onclick="toggleMarkdown('${cellId}')">Toggle Markdown</button>
-          <button onclick="minimizeCell('${cellId}')">&#9660;</button>
-          <button onclick="deleteCell('${cellId}')">Delete</button>
-        </div>
-        <textarea class="markdown-editor"></textarea>
-        <div class="markdown-render minimized"></div>
-      `;
-      notebook.appendChild(cell);
-    }
-
-    function runCode(cellId) {
-      const cell = document.getElementById(cellId);
-      const output = cell.querySelector('.output');
-      output.innerHTML = '';
-
-      const cleanup = redirectConsole(output);
-      try {
-        const code = cell.editor.value;
-        new Function(code)();
-      } catch (err) {
-        console.error(err.message);
-      }
-      cleanup();
-    }
     async function runCode(cellId) {
       const cell = document.getElementById(cellId);
       const output = cell.querySelector('.output');
@@ -243,44 +211,42 @@ function showAlert({ BgColor = '#fff', Text = 'Alert' } = {}) {
       cleanup();
     }
 
-    function redirectConsole(output) {
-      const originalLog = console.log;
-      const originalError = console.error;
+function redirectConsole(output) {
+  const originalLog = console.log;
+  const originalError = console.error;
 
-      console.log = (...args) => {
-        const msg = document.createElement('div');
-        msg.className = 'logDiv';
-        msg.textContent = args.join(''); // '» ' + 
-        output.appendChild(msg);
-      };
+  // Override console.log().
+  console.log = (...args) => {
+    const msg = document.createElement('div');
+    msg.className = 'logDiv';
+    msg.textContent = args.join('');
+    output.appendChild(msg);
+    // originalLog.apply(console, args); // Also log to real console.
+  };
 
-      console.error = (...args) => {
-        const msg = document.createElement('div');
-        msg.className = 'errorDiv';
-        msg.textContent = '» ' + args.join('');
-        output.appendChild(msg);
-      };
+  // Override console.error
+  console.error = (...args) => {
+    const msg = document.createElement('div');
+    msg.className = 'errorDiv';
+    msg.textContent = '» ' + args.join('');
+    output.appendChild(msg);
+    // originalError.apply(console, args); // Also log to real console.
+  };
 
-      return () => {
-        console.log = originalLog;
-        console.error = originalError;
-      };
-    }
+  // Create global log() and error() functions.
+  window.log = (...args) => console.log(...args);
+  window.n = (...args) => console.log(...args); // Even shorter and quicker log function than the above "log()".
+  window.error = (...args) => console.error(...args);
 
-    function toggleMarkdown(cellId) {
-      const cell = document.getElementById(cellId);
-      const editor = cell.querySelector('.markdown-editor');
-      const render = cell.querySelector('.markdown-render');
-
-      if (render.classList.contains('minimized')) {
-        render.innerHTML = marked(editor.value);
-        editor.classList.add('minimized');
-        render.classList.remove('minimized');
-      } else {
-        editor.classList.remove('minimized');
-        render.classList.add('minimized');
-      }
-    }
+  // Returns a function that can be called to restore the original console.log and console.error.
+  return () => {
+    console.log = originalLog;
+    console.error = originalError;
+    // delete window.n;
+    // delete window.log;
+    // delete window.error;
+  };
+}
 
     function minimizeCell(cellId, textId) {
       const cell = document.getElementById(cellId);
@@ -311,15 +277,15 @@ function setLocal() {
   });
   try {
     localStorage.setItem(`JSNB-${title}`, JSON.stringify(content));
-    showAlert({ BgColor: '#1bd13d', Text: '✔ Notebook Saved'});
+    showAlert({ BgColor: '#3705eb', Text: '✔ Saved Locally'});
   } catch (error) {
     showAlert({ BgColor: '#f2074e', Text: '✖ Saving Failed'});
   }
 }
 
-    function showNotebookList() {
-      createCodeCell();
-      const showListsCode = `
+function showNotebookList() {
+    createCodeCell();
+    const showListsCode = `// List All Notebooks.
 for (let i = 0; i < localStorage.length; i++) {
    let key = localStorage.key(i);
    if (key.startsWith('JSNB')) {
@@ -327,16 +293,14 @@ for (let i = 0; i < localStorage.length; i++) {
    }
 }
 
-var logs = document.getElementsByClassName('logDiv');
-for (let log of logs) {
-  log.addEventListener('click', function(){ 
-  let ID = log.innerText; 
-  finalID = ID.replaceAll('JSNB-', ''); 
-  document.getElementById('notebook-title').value = finalID;
-  });
-} ` ;
-      notebook.lastChild.editor.value = showListsCode;
-    }
+const outputDiv = document.getElementsByClassName('output')[0];
+outputDiv.addEventListener('click', function(event) { 
+    let ID = event.target.closest('.logDiv').textContent; 
+    finalID = ID.replaceAll('JSNB-', ''); 
+    document.getElementById('notebook-title').value = finalID;
+}) ` ;
+    notebook.lastChild.editor.value = showListsCode;
+}
 
 function getLocal() {
   const notebookName = document.getElementById('notebook-title').value.trim();
@@ -347,19 +311,13 @@ function getLocal() {
   const localNote = localStorage.getItem(`JSNB-${notebookName}`);
   if (localNote) {
     const content = JSON.parse(localNote); // Parse the local storage string into JSON
-    document.getElementById('notebook-title').value = content.title; // Optional: confirm if overwriting is intended
+    document.getElementById('notebook-title').value = content.title;
     notebook.innerHTML = ''; // Clear the notebook content.
     content.cells.forEach(cell => {
       if (cell.type === 'code') {
         createCodeCell();
         if (notebook.lastChild && notebook.lastChild.editor) {
           notebook.lastChild.editor.value = cell.content; // Set the content of the code cell
-        }
-      } else if (cell.type === 'text') {
-        createTextCell();
-        const markdownEditor = notebook.lastChild?.querySelector('.markdown-editor');
-        if (markdownEditor) {
-          markdownEditor.value = cell.content; // Set the content of the text cell
         }
       }
     });
@@ -368,51 +326,59 @@ function getLocal() {
   }
 }
     
-    function downloadNotebook() {
-      const title = document.getElementById('notebook-title').value;
-      const content = { title, cells: [] };
+// Upload Notebook to Vercel KV.
+async function saveNotebook() {
+      notebook.innerHTML = '';
+      for (let i = 0; i < localStorage.length; i++) {
+        let key = localStorage.key(i);
+        if (key.startsWith('JSNB')) {
+            const json = JSON.parse(localStorage.getItem(key));
+            json.cells.forEach((cell) => {
+              if (cell.type === 'code') {
+              createCodeCell();
+                notebook.lastChild.editor.value = '// ' + key + '\n' + cell.content;
+              }
+           })
+        }
+      }
+
+      const content = { title: 'ALL-NOTEBOOKS', cells: [] };
       notebook.querySelectorAll('.cell').forEach(cell => {
         if (cell.classList.contains('code-cell')) {
           content.cells.push({ type: 'code', content: cell.editor.value });
-        } else if (cell.classList.contains('text-cell')) {
-          const markdown = cell.querySelector('.markdown-editor').value;
-          content.cells.push({ type: 'text', content: markdown });
         }
       });
-      const blob = new Blob([JSON.stringify(content, null, 2)], { type: 'application/json' });
-      const link = document.createElement('a');
-      link.href = URL.createObjectURL(blob);
-      link.download = `JSNB-${title || 'Untitled Notebook'}.json`;
-      link.click();
-    }
 
-    function uploadNotebook(event) {
-      const file = event.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = e => {
-        const content = JSON.parse(e.target.result);
-        document.getElementById('notebook-title').value = content.title || 'Untitled Notebook';
-        notebook.innerHTML = '';
-        content.cells.forEach(cell => {
-          if (cell.type === 'code') {
-            createCodeCell();
-            notebook.lastChild.editor.value = cell.content;
-          } else if (cell.type === 'text') {
-            createTextCell();
-            notebook.lastChild.querySelector('.markdown-editor').value = cell.content;
-          }
+      try {
+        const response = await fetch('https://1nrp.vercel.app/jsnb', { // express js paths are case-insensitive.
+            method: 'POST',
+            body: JSON.stringify(content, null, 2)
         });
-      };
-
-      reader.readAsText(file);
+        if (response.ok) {
+            showAlert({ BgColor: '#1bd13d', Text: `✔ Notebook Saved`});
+        } else {
+            alert('Error from server:', await response.text());
+        }
+      } catch (error) {
+        console.error('Error sending Notebook to Vercel KV:', error);
     }
+}
 
-    document.getElementById('add-code').addEventListener('click', createCodeCell);
-    document.getElementById('add-text').addEventListener('click', createTextCell);
-    document.getElementById('download-notebook').addEventListener('click', downloadNotebook);
-    document.getElementById('upload-trigger').addEventListener('click', () => document.getElementById('upload-notebook').click());
-    document.getElementById('upload-notebook').addEventListener('change', uploadNotebook);
-  </script>
+// Fetch Notebook from Vercel KV.
+async function getNotebook() {
+    let content = await ( await fetch('https://1nrp.vercel.app/JSNB') ).json();
+    content = JSON.parse(content.result);
+    document.getElementById('notebook-title').value = content.title;
+    notebook.innerHTML = '';
+    console.log('JSON File: ', content)
+    content.cells.forEach(cell => {
+      if (cell.type === 'code') {
+        createCodeCell();
+        notebook.lastChild.editor.value = cell.content;
+      }
+    });
+}
+
+</script>
 </body>
 </html>
