--- a/hls.html
+++ b/hls.html
@@ -17,7 +17,7 @@
             border: 2px solid #333;
             border-radius: 6px;
             background-color: #02121b;
-            max-width: 100vw:
+            max-width: 99dvw;
             max-height: 80dvh;
         }
         #url-input {
