--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <p><a href="Firebase-Notes">Firebase Notes</a></p>
     <p><a href="M3U8/m3u8">M3U8 To MP4</a></p>
     <p><a href="offnote">Offline Notes</a><p>
+    <p><a href="Chart-Replay">Chart Replay</a></p>
     <p><a href="text">Text Reader</a></p>
     <p><a href="https://1nrp.github.io/vid/cors" style="background-color: #000; padding: 20px 60px"></a></p>
     <p><a href="tboxThumbnail" style="background-color: #000; padding: 20px 60px"></a></p>
@@ -52,3 +53,4 @@
 
 </body> 
 </html>
+
