--- a/Chart-Replay.html
+++ b/Chart-Replay.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Candlestick Replay</title>
+    <title> TA Intuition Builder For Security Prices </title>
     <style>
         :root {
             --bg-color: #131722;
@@ -22,7 +21,7 @@
             padding: 0;
             background-color: var(--bg-color);
             color: var(--text-color);
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            font-family: Arial, apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             overflow: hidden;
             height: 100vh;
             display: flex;
@@ -38,14 +37,13 @@
             margin: 2px;
             border-radius: 10px;
             z-index: 20;
-            font-family: Poppins, Courier, monospace;
+            font-family: Arial, Courier, monospace, sans-serif;
             font-size: 12px;
             font-weight: 600;
         }
 
         ::placeholder {
             color: #929292;
-            font-family: Poppins, 'Courier New', Courier, monospace;
             font-size: 14px;
             font-weight: 600;
         }
@@ -54,7 +52,6 @@
             background: #031547be;
             color: #ece919;
             margin: 2px;
-            font-family: Poppins, 'Courier New', Courier, monospace;
             border: 2px dashed #bb550d;
             padding: 6px 9px;
             border-radius: 4px;
@@ -279,7 +276,7 @@
     <div id="toolbar">
         <div style="display: flex; flex-direction: row; align-items: center; gap: 10px">
           <input type="file" id="fileInput" accept=".json" style="width: 68vw; display: none" />
-          <input id="urlInput" style="width: 70vw; padding: 6px; border: 2px dashed #bb550d" type="text" placeholder="Enter JSON URL..." />
+          <input id="urlInput" style="width: 70vw; padding: 9px; border: 2px dashed #bb550d" type="text" placeholder="Enter JSON URL..." />
           <button onclick="urlOrFile(); style.transform = (style.transform === 'rotate(180deg)' ? 'rotate(0deg)' : 'rotate(180deg)')" style="transition: transform 0.4s ease" >☰</button>
         </div>
         <button id="btn-ai">AI Analyst</button>
@@ -290,7 +287,7 @@
         
         <div class="slider-group">
           <div class="sliders">
-            <label>SPEED  :</label> 
+            <label>∆Speed</label> 
             <input type="range" id="speed-slider" min="0" max="100" value="50">
           </div>
           <div class="sliders">
@@ -910,7 +907,7 @@
                 Output format:
                 <strong>Trend:</strong> [Bullish/Bearish]
                 <strong>Levels:</strong> [Support/Resistance]
-                <strong>Insight:</strong> [Patterns like Engulfing, etc.]
+                <strong>Insight:</strong> [Patterns like Engulfing, Hammer, Double Top etc.]
                 <strong>Prediction:</strong> [Short term bias]
             `;
 
@@ -932,8 +929,6 @@
             const urlInput = document.getElementById('urlInput');
             const fileInput = document.getElementById('fileInput');
             const stat = {
-                url: urlInput.value,
-                file: fileInput.files[0],
                 urlVisible: urlInput.style.display,
                 fileVisible: fileInput.style.display
             }
@@ -950,7 +945,7 @@
         async function fetchJsonData() {
             // https://api.india.delta.exchange/v2/history/candles?resolution=1m&symbol=BTCUSD&start=1763721501&end=1763733501
             const urlInput = document.getElementById('urlInput');
-            const url = urlInput.value.startsWith('https://api.india.delta.exchange/v2/history/candles') ? urlInput.value : `https://api.india.delta.exchange/v2/history/candles?resolution=1m&symbol=BTCUSD&start=${ Math.round(Date.now() / 1000) - 1200 }&end=${ Math.round(Date.now() / 1000) - 12000 }`;
+            const url = urlInput.value.startsWith('https://api.india.delta.exchange/v2/history/candles') ? urlInput.value : `https://api.india.delta.exchange/v2/history/candles?resolution=1m&symbol=BTCUSD&start=${ Math.round(Date.now() / 1000) - 21600 }&end=${ Math.round(Date.now() / 1000) }`;
             const response = await fetch(url);
             const json = await response.json();
             const ticks = [];
