--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
     <p><a href="text">Text Reader</a></p>
     <p><a href="https://1nrp.github.io/vid/cors" style="background-color: #000; padding: 20px 60px"></a></p>
     <p><a href="tboxThumbnail" style="background-color: #000; padding: 20px 60px"></a></p>
+    <p><a href="Music" style="background-color: #000; padding: 20px 60px"></a></p>
 
 </center>
 
 </body> 
 </html>
+
 
